--- a/ecom-payment-settings/ecom-payment-settings.service.json
+++ b/ecom-payment-settings/ecom-payment-settings.service.json
@@ -10,7 +10,7 @@
       "description":
         [ "The Payment Settings SPI allows you to apply custom payment settings during the payment process of an order. ",
           "",
-          "## Before you begin",
+          "### Before you begin",
           "It's important to note the following points before starting to code:",
           "+ To collect payments, a Wix site must [connect a payment provider](https://support.wix.com/en/article/connecting-a-payment-provider). ",
           "+ Each payment provider has specific payment settings they accept with their Wix integration. For example, [Tranzila](https://support.wix.com/en/article/connecting-tranzila-as-a-payment-provider) is a payment provider that supports [3 domain security](https://support.wix.com/en/article/about-3d-secure-3ds-payments-with-third-party-payment-providers) (3DS), but not all payment providers offer this feature. ",
@@ -21,16 +21,16 @@
           "",
           "![3DS popup](..assets/images/3ds.png \"3DS popup\")",
           "",
-          "## To add a custom extension:",
+          "### To add a custom extension:",
           "1. [Add the extension to your site](https://dev.wix.com/docs/develop-websites/articles/coding-with-velo/integrations/custom-extensions-spis/custom-app-extensions-using-sp-is#step-1-create-a-new-extension-on-your-wix-site).",
           "2. Update the [`getConfig()`](https://www.wix.com/velo/reference/spis/ecom-payment-settings/getconfig) function in the **-config.js** file that is added to your site during step 1.",
           "3. Update the [`getPaymentSettings()`](https://www.wix.com/velo/reference/spis/ecom-payment-settings/getpaymentsettings) function in the **.js** file that is added to your site during step 1.",
           "",
-          "Learn more:",
+          "### Learn more:",
           "+ [Tutorial: Payment Settings Custom Extension](https://support.wix.com/en/article/tutorial-payment-settings-custom-extension)",
           "+ [Velo: Custom App Extensions Using SPIs](https://support.wix.com/en/article/velo-custom-business-app-extensions-using-spis-beta)",
           "",
-          "## Terminology",
+          "### Terminology",
           "",
           "+ **3 Domain Security (3DS):** An additional layer of security for online credit and debit card transactions. The name refers to the three domains which interact using the protocol: the card issuer, the acquiring bank, and the payment gateway that facilitates the transaction. Learn more [about 3DS payments with third-party payment providers](https://support.wix.com/en/article/about-3d-secure-3ds-payments-with-third-party-payment-providers).",
           "+ **Payment Providers:** Different payment methods available to your Wix site. Learn more about [accepting payments](https://support.wix.com/en/article/accepting-payments-an-overview)." ],
