--- a/wix-application-backend/wix-application-backend.service.json
+++ b/wix-application-backend/wix-application-backend.service.json
@@ -1,7 +1,7 @@
 { "name": "wix-application-backend",
   "mixes": [],
   "labels":
-    [ "new" ],
+    [ "changed" ],
   "location":
     { "lineno": 1,
       "filename": "application-backend.js" },
@@ -24,14 +24,15 @@
   "properties": [],
   "operations":
     [ { "name": "getDecodedAppInstance",
-        "labels": [],
+        "labels":
+          [ "changed" ],
         "nameParams": [],
         "params": [],
         "ret":
           { "type":
               { "name": "Promise",
                 "typeParams":
-                  [ "wix-application.decodedAppInstance" ] },
+                  [ "wix-application-backend.decodedAppInstance" ] },
             "doc": "Fulfilled - An object with data about the installation of your app on a specific site." },
         "locations":
           [ { "lineno": 16,
@@ -45,11 +46,11 @@
             "examples":
               [ { "title": "Retrieve the Vendor Product ID",
                   "body":
-                    [ "import wixApplication from 'wix-application';",
+                    [ "import wixApplicationBackend from 'wix-application-backend';",
                       "",
                       "// ...",
                       "",
-                      "wixApplication.getDecodedAppInstance()",
+                      "wixApplicationBackend.getDecodedAppInstance()",
                       "  .then((decodedAppInstance) => {",
                       "    const plan = decodedAppInstance.vendorProductId;  // 'basic'",
                       "  })",
@@ -64,6 +65,33 @@
         "extra":
           {  } } ],
   "callbacks": [],
-  "messages": [],
+  "messages":
+    [ { "name": "decodedAppInstance",
+        "locations":
+          [ { "lineno": 28,
+              "filename": "application-backend.js" } ],
+        "docs":
+          { "summary": "An object with data about the installation of your app on a specific site.",
+            "links": [],
+            "examples": [],
+            "extra":
+              {  } },
+        "members":
+          [ { "name": "appDefId",
+              "type": "string",
+              "doc": "The unique identifier of your app." },
+            { "name": "instanceId",
+              "type": "string",
+              "doc": "The ID of your app on this specific site." },
+            { "name": "vendorProductId",
+              "type": "string",
+              "doc": "The Plan ID of the app purchased by the site." },
+            { "name": "expirationDate",
+              "type": "string",
+              "doc": "The plan's expiration date." } ],
+        "extra":
+          {  },
+        "labels":
+          [ "new" ] } ],
   "extra":
     {  } }
