--- a/wix-application/wix-application.service.json
+++ b/wix-application/wix-application.service.json
@@ -24,8 +24,7 @@
   "properties": [],
   "operations":
     [ { "name": "getAppPageUrl",
-        "labels":
-          [ "changed" ],
+        "labels": [],
         "nameParams": [],
         "params":
           [ { "name": "pageId",
@@ -38,7 +37,7 @@
                   [ "string" ] },
             "doc": "Fulfilled - The page URL." },
         "locations":
-          [ { "lineno": 37,
+          [ { "lineno": 38,
               "filename": "application.js" } ],
         "docs":
           { "summary": "Gets the URL of the new page that was added by a Blocks app, when installed on a site.",
@@ -82,7 +81,7 @@
           [ { "lineno": 16,
               "filename": "application.js" } ],
         "docs":
-          { "summary": "Gets the Wix Blocks App data as a decoded Json Web Token (JWT) object.",
+          { "summary": "Gets the Wix Blocks App data as a decoded JSON Web Token (JWT) object.",
             "description":
               [ "The `getDecodedAppInstance()` function returns a Promise that resolves to an object with data about the installation of your app on a specific site. ",
                 "It is useful when [managing your application's pricing](https://support.wix.com/en/article/wix-blocks-setting-up-and-managing-your-apps-pricing)." ],
@@ -94,8 +93,14 @@
                       "",
                       "// ...",
                       "",
-                      "const instance = await wixApplication.getDecodedAppInstance();",
-                      "const plan = instance.vendorProductId; // 'basic'" ],
+                      "wixApplication.getDecodedAppInstance()",
+                      "  .then((instance) => {",
+                      "    const plan = instance.vendorProductId;  // 'basic'",
+                      "  })",
+                      "  .catch((error) => {",
+                      "    console.error(error);",
+                      "    // Handle the error",
+                      "  });" ],
                   "extra":
                     {  } } ],
             "extra":
@@ -103,8 +108,7 @@
         "extra":
           {  } },
       { "name": "openAppLightbox",
-        "labels":
-          [ "changed" ],
+        "labels": [],
         "nameParams": [],
         "params":
           [ { "name": "lightboxId",
@@ -121,7 +125,7 @@
                   [ "Object" ] },
             "doc": "Fulfilled - The returned data from the lightbox." },
         "locations":
-          [ { "lineno": 50,
+          [ { "lineno": 51,
               "filename": "application.js" } ],
         "docs":
           { "summary": "Opens a lightbox that was added to a site by the Blocks app, during the app installation process and optionally passes it data.",
@@ -202,13 +206,16 @@
         "members":
           [ { "name": "appDefId",
               "type": "string",
-              "doc": "The unique idenfitier of your app." },
+              "doc": "The unique identifier of your app." },
             { "name": "instanceId",
               "type": "string",
               "doc": "The ID of your app on this specific site." },
             { "name": "vendorProductId",
               "type": "string",
-              "doc": "The Plan ID of the app purchased by the site." } ],
+              "doc": "The Plan ID of the app purchased by the site." },
+            { "name": "expirationDate",
+              "type": "string",
+              "doc": "The plan's expiration date." } ],
         "extra":
           {  },
         "labels":
